# sandhole-benchmark

./: .gitignore  Cargo.toml  README.md  justfile  shell.nix
measure/: Cargo.toml
measure/src/: lib.rs  main.rs
npins/: sources.json
service/: Cargo.toml
service/src/: lib.rs  main.rs  routes.rs  ssh.rs
src/: lib.rs  main.rs  routes.rs
test_data/: ssh_key
test_data/ca/: rootCA-key.pem  rootCA.pem
test_data/certificates_sandhole/foobar.tld/: README.txt  fullchain.pem
test_data/certificates_sish/: foobar.tld.key
test_data/user_keys/: ssh_key.pub
