[workspace]
resolver = "3"
members = ["service", "measure"]

[workspace.dependencies]
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.31"
rand = "0.9.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
  "fmt",
  "env-filter",
  "std",
] }
