[package]
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
name = "sandhole-benchmark-measure"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/epiceric/sandhole-benchmark"

[dependencies]
aws-lc-rs = "1.15.3"
bytes.workspace = true
clap.workspace = true
color-eyre.workspace = true
futures.workspace = true
humantime = "2.3.0"
rand.workspace = true
reqwest = "0.13.0"
reqwest-websocket = { git = "https://github.com/jgraef/reqwest-websocket.git", rev = "25743f1a0ed0303a934897efa0b8a129f3381395" }
rustls = "0.23.36"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
