[package]
authors = ["Eric Rodrigues Pires <eric@eric.dev.br>"]
name = "sandhole-benchmark-service"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/epiceric/sandhole-benchmark"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
backon = "1.4.0"
bytes.workspace = true
clap.workspace = true
color-eyre.workspace = true
futures.workspace = true
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
rand.workspace = true
russh = "0.52.1"
tokio.workspace = true
tower = "0.5.2"
tracing.workspace = true
tracing-subscriber.workspace = true
